--- a/pages/cafe-contacts.html
+++ b/pages/cafe-contacts.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Категория Кафе/бар/ресторан - Укажите контакты и часы работы</title>
-    <link rel="stylesheet" href="../styles/index.css" />
+    <link rel="stylesheet" href="./cafe-contacts.css" />
   </head>
 
   <body class="container">
     <div class="page">
       <header class="header">
         <div class="header__container">
-          <div class="header__bar-left">
+          <div class="header__bar-logo">
             <div class="header__logo"></div>
             <button type="button" class="button button_type_link button_place_header">
               <img src="../images/icon_location.svg" alt="геометка" class="button__icon" />
@@ -47,7 +47,7 @@
         <h1 class="form__title">стать участником</h1>
         <div class="form__content">
           <div class="form__container">
-            <p class="form__step">шаг 2 из 4</p>
+            <p class="form__step">шаг 3 из 4</p>
             <div class="form__instruction">
               <p class="form__heading">укажите контакты и часы работы</p>
               <div class="form__paragraphs">
