--- a/pages/other-form_step3.html
+++ b/pages/other-form_step3.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Гедонизмфест</title>
-    <link rel="stylesheet" href="../styles/index.css" />
+    <link rel="stylesheet" href="./other-form_step3.css" />
   </head>
   <body class="container">
     <div class="page">
       <header class="header">
         <div class="header__container">
-          <div class="header__bar-left">
+          <div class="header__bar-logo">
             <div class="header__logo"></div>
             <button type="button" class="button button_type_link button_place_header">
               <img src="../images/icon_location.svg" alt="геометка" class="button__icon" />
@@ -58,7 +58,7 @@
                 <div class="form__unit">
                   <label class="form__label" for="other-clock">время проведения</label>
                   <input
-                    class="form__field formCafe__input_type_text"
+                    class="form__field"
                     id="other-clock"
                     type="text"
                     name="other-clock"
@@ -69,7 +69,7 @@
                 <div class="form__unit">
                   <label class="form__label" for="other-address">адрес проведения</label>
                   <input
-                    class="form__field formCafe__input_type_text"
+                    class="form__field"
                     id="other-address"
                     type="text"
                     name="other-address"
@@ -79,12 +79,12 @@
                 </div>
                 <div class="form__unit">
                   <label class="form__label" for="contact-number">номер телефона для бронирования</label>
-                  <input class="form__field formCafe__input_type_number" id="contact-number" type="tel" name="contact-number" value="+7(" />
+                  <input class="form__field" id="contact-number" type="tel" name="contact-number" value="+7(" />
                 </div>
                 <div class="form__unit">
                   <label class="form__label" for="participate-price">стоимость участия</label>
                   <input
-                    class="form__field formCafe__input_type_text"
+                    class="form__field"
                     id="participate-price"
                     type="text"
                     name="participate-price"
