--- a/pages/partyForm_step3.html
+++ b/pages/partyForm_step3.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Гедонизмфест</title>
-    <link rel="stylesheet" href="../styles/index.css" />
+    <link rel="stylesheet" href="./partyForm_step3.css" />
   </head>
   <body class="container">
     <div class="page">
       <header class="header">
         <div class="header__container">
-          <div class="header__bar-left">
+          <div class="header__bar-logo">
             <div class="header__logo"></div>
             <button type="button" class="button button_type_link button_place_header">
               <img src="../images/icon_location.svg" alt="геометка" class="button__icon" />
