--- a/pages/cafeForm.html
+++ b/pages/cafeForm.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Гедонизмфест</title>
-    <link rel="stylesheet" href="../styles/index.css" />
+    <link rel="stylesheet" href="./cafeForm.css" />
   </head>
   <body class="container">
     <div class="page">
       <header class="header">
         <div class="header__container">
-          <div class="header__bar-left">
+          <div class="header__bar-logo">
             <div class="header__logo"></div>
             <button type="button" class="button button_type_link button_place_header">
               <img src="../images/icon_location.svg" alt="геометка" class="button__icon" />
@@ -79,7 +79,7 @@
                 <div class="form__unit">
                   <label class="form__label" for="cafe-name">название заведения</label>
                   <input
-                    class="form__field formCafe__input_type_text"
+                    class="form__field"
                     id="cafe-name"
                     type="text"
                     name="cafe-name"
@@ -91,7 +91,7 @@
                 <div class="form__unit">
                   <label class="form__label" for="contact-name">контактное лицо</label>
                   <input
-                    class="form__field formCafe__input_type_text"
+                    class="form__field"
                     id="contact-name"
                     type="text"
                     name="contact-name"
@@ -102,7 +102,7 @@
 
                 <div class="form__unit">
                   <label class="form__label" for="contact-number">телефон для связи с организатором</label>
-                  <input class="form__field formCafe__input_type_number" id="contact-number" type="tel" name="contact-number" value="+7(" />
+                  <input class="form__field" id="contact-number" type="tel" name="contact-number" value="+7(" />
                 </div>
 
                 <div class="form__unit">
