--- a/pages/category.html
+++ b/pages/category.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Гедонизмфест</title>
-    <link rel="stylesheet" href="../styles/index.css" />
+    <link rel="stylesheet" href="./category.css" />
   </head>
   <body class="container">
     <div class="page">
       <header class="header">
         <div class="header__container">
-          <div class="header__bar-left">
+          <div class="header__bar-logo">
             <div class="header__logo"></div>
             <button type="button" class="button button_type_link button_place_header">
               <img src="../images/icon_location.svg" alt="геометка" class="button__icon" />
@@ -75,10 +75,10 @@
             </form>
           </div>
           <div class="form__controls">
-            <button type="button" class="form__button_type_back form-input form-input__control" onclick="location.href='../index.html';">
+            <button type="button" class="form-input form-input__control form__button_type_back" onclick="location.href='../index.html';">
               отмена
             </button>
-            <button type="submit" id="category-submit" form="categoryForm" class="form__button_type_submit form-input form-input__control"></button>
+            <button type="submit" id="category-submit" form="categoryForm" class="form-input form-input__control form__button_type_submit"></button>
           </div>
         </div>
       </main>
