--- a/pages/master-class.html
+++ b/pages/master-class.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Гедонизмфест</title>
-    <link rel="stylesheet" href="../styles/index.css" />
+    <link rel="stylesheet" href="./master-class.css" />
   </head>
   <body class="container">
     <div class="page">
       <header class="header">
         <div class="header__container">
-          <div class="header__bar-left">
+          <div class="header__bar-logo">
             <div class="header__logo"></div>
             <button type="button" class="button button_type_link button_place_header">
               <img src="../images/icon_location.svg" alt="геометка" class="button__icon" />
@@ -89,7 +89,7 @@
                 <div class="form__unit">
                   <label class="form__label" for="event-name">название мероприятия</label>
                   <input
-                    class="form__field formCafe__input_type_text"
+                    class="form__field"
                     id="event-name"
                     type="text"
                     name="event-name"
@@ -101,7 +101,7 @@
                 <div class="form__unit">
                   <label class="form__label" for="event-date">дата проведения</label>
                   <input
-                    class="form__field formCafe__input_type_text"
+                    class="form__field"
                     id="event-date"
                     type="text"
                     name="event-date"
@@ -113,7 +113,7 @@
                 <div class="form__unit">
                   <label class="form__label" for="contact-name">контактное лицо</label>
                   <input
-                    class="form__field formCafe__input_type_text"
+                    class="form__field"
                     id="contact-name"
                     type="text"
                     name="contact-name"
@@ -124,19 +124,19 @@
 
                 <div class="form__unit">
                   <label class="form__label" for="contact-number">номер телефона для связи с организатором</label>
-                  <input class="form__field formCafe__input_type_number" id="contact-number" type="tel" name="contact-number" value="+7(" />
+                  <input class="form__field" id="contact-number" type="tel" name="contact-number" value="+7(" />
                 </div>
               </fieldset>
             </form>
           </div>
           <div class="form__controls">
-            <button type="button" class="form__button_type_back form-input form-input__control" onclick="location.href='./category.html';">
+            <button type="button" class="form-input form-input__control form__button_type_back" onclick="location.href='./category.html';">
               назад
             </button>
             <button
               type="submit"
               form="master-class"
-              class="form__button_type_submit form-input form-input__control form-input__control_active"
+              class="form-input form-input__control form-input__control_active form__button_type_submit"
             ></button>
           </div>
         </div>
