--- a/pages/master-class_Step3.html
+++ b/pages/master-class_Step3.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Гедонизмфест</title>
-    <link rel="stylesheet" href="../styles/index.css" />
+    <link rel="stylesheet" href="./master-class_Step3.css" />
   </head>
   <body class="container">
     <div class="page">
       <header class="header">
         <div class="header__container">
-          <div class="header__bar-left">
+          <div class="header__bar-logo">
             <div class="header__logo"></div>
             <button type="button" class="button button_type_link button_place_header">
               <img src="../images/icon_location.svg" alt="геометка" class="button__icon" />
@@ -58,7 +58,7 @@
                 <div class="form__unit">
                   <label class="form__label" for="cafe-clock">время проведения</label>
                   <input
-                    class="form__field formCafe__input_type_text"
+                    class="form__field "
                     id="cafe-clock"
                     type="text"
                     name="cafe-clock"
@@ -69,7 +69,7 @@
                 <div class="form__unit">
                   <label class="form__label" for="cafe-address">адрес проведения</label>
                   <input
-                    class="form__field formCafe__input_type_text"
+                    class="form__field "
                     id="cafe-address"
                     type="text"
                     name="cafe-address"
@@ -84,7 +84,7 @@
                 <div class="form__unit">
                   <label class="form__label" for="participation-price">стоимость участия</label>
                   <input
-                    class="form__field formCafe__input_type_text"
+                    class="form__field"
                     id="participation-price"
                     type="text"
                     name="participation-price"
@@ -107,10 +107,10 @@
             </form>
           </div>
           <div class="form__controls">
-            <button type="button" class="form__button_type_back form-input form-input__control" onclick="location.href='../pages/master-class.html';">
+            <button type="button" class="form-input form-input__control form__button_type_back" onclick="location.href='../pages/master-class.html';">
               назад
             </button>
-            <button type="submit" class="form__button_type_submit form-input form-input__control form-input__control_active"></button>
+            <button type="submit" class="form-input form-input__control form__button_type_submit form-input__control_active"></button>
           </div>
         </div>
       </main>
