--- a/pages/partyForm.html
+++ b/pages/partyForm.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Гедонизмфест</title>
-    <link rel="stylesheet" href="../styles/index.css" />
+    <link rel="stylesheet" href="./partyForm.css" />
   </head>
   <body class="container">
     <div class="page">
       <header class="header">
         <div class="header__container">
-          <div class="header__bar-left">
+          <div class="header__bar-logo">
             <div class="header__logo"></div>
             <button type="button" class="button button_type_link button_place_header">
               <img src="../images/icon_location.svg" alt="геометка" class="button__icon" />
@@ -72,7 +72,7 @@
                 </select>
                 <label class="form__label" for="party-name">название мероприятия</label>
                 <input
-                  class="form__field formCafe__input_type_text"
+                  class="form__field"
                   id="party-name"
                   type="text"
                   name="party-name"
@@ -80,7 +80,7 @@
                   value=""
                 />
               </fieldset>
-              <fieldset class="form__radio-block form__radio-block_container">
+              <fieldset class="form__radio-block">
                 <label class="form__radio-unit">
                   <span class="form-input__radio-icon form-input__radio-icon_checked"></span>
                   <input class="form-input__radio" type="radio" id="party-public" name="party-public" value="public" />
@@ -99,7 +99,7 @@
               <fieldset class="form__input-container">
                 <label class="form__label" for="event-date">дата проведения</label>
                 <input
-                  class="form__field formCafe__input_type_text"
+                  class="form__field"
                   id="event-date"
                   type="text"
                   name="event-date"
@@ -108,7 +108,7 @@
                 />
                 <label class="form__label" for="contact-name">контактное лицо</label>
                 <input
-                  class="form__field formCafe__input_type_text"
+                  class="form__field"
                   id="contact-name"
                   type="text"
                   name="contact-name"
@@ -116,7 +116,7 @@
                   value=""
                 />
                 <label class="form__label" for="contact-number">телефон для связи с организатором</label>
-                <input class="form__field formCafe__input_type_number" id="contact-number" type="tel" name="contact-number" value="+7(" />
+                <input class="form__field" id="contact-number" type="tel" name="contact-number" value="+7(" />
               </fieldset>
             </form>
           </div>
