--- a/pages/cafeForm.html
+++ b/pages/cafeForm.html
@@ -102,7 +102,16 @@
 
                 <div class="form__unit">
                   <label class="form__label" for="contact-number">телефон для связи с организатором</label>
-                  <input class="form__field formCafe__input_type_number" id="contact-number" type="tel" name="contact-number" value="+7(" />
+                  <input 
+                    class="form__field formCafe__input_type_number"
+                    id="contact-number"
+                    type="tel"
+                    name="contact-number"
+                    value="+7(" 
+                    pattern="\+7\s?[\(]{0,1}9[0-9]{2}[\)]{0,1}\s?\d{3}[-]{0,1}\d{2}[-]{0,1}\d{2}"
+                    required
+                    />
+                    <span class="form__error-span"></span>
                 </div>
 
                 <div class="form__unit">
