Change header buttons on links

--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
           <nav class="header__nav-bar">
             <ul class="header__link-list">
               <li class="header__list-item">
-                <button type="button" class="button button_type_link">куда пойти</button>
+                <a href="#" class="header__link">куда пойти</a>
               </li>
               <li class="header__list-item">
-                <button type="button" class="button button_type_link">стать участником</button>
+                <a href="#" class="header__link">стать участником</a>
               </li>
               <li class="header__list-item">
-                <button type="button" class="button button_type_link">о фестивале</button>
+                <a href="#" class="header__link">о фестивале</a>
               </li>
             </ul>
           </nav>
           <div class="header__user-actions">
             <button type="button" class="button button_type_link">
-              <img src="./images/icon_heart.svg" alt="сердце" class="button__icon" />
+              <img src="./images/icon_heart.svg" alt="Хочу пойти" class="button__icon" />
               хочу пойти
             </button>
             <button type="button" class="button button_type_filled button_place_header">поддержать</button>
