--- a/pages/other.html
+++ b/pages/other.html
@@ -21,13 +21,13 @@
           <nav class="header__nav-bar">
             <ul class="header__link-list">
               <li class="header__list-item">
-                <button type="button" class="button button_type_link">куда пойти</button>
+                <a href="#" class="header__link">куда пойти</a>
               </li>
               <li class="header__list-item">
-                <button type="button" class="button button_type_link" onclick="location.href='../index.html';">стать участником</button>
+                <a href="../index.html" class="header__link">стать участником</a>
               </li>
               <li class="header__list-item">
-                <button type="button" class="button button_type_link">о фестивале</button>
+                <a href="#" class="header__link">о фестивале</a>
               </li>
             </ul>
           </nav>
@@ -75,38 +75,17 @@
 
                 <div class="form__unit">
                   <label class="form__label" for="cafe-name">название мероприятия</label>
-                  <input
-                    class="form__field"
-                    id="cafe-name"
-                    type="text"
-                    name="cafe-name"
-                    placeholder="введите название мероприятия"
-                    value=""
-                  />
+                  <input class="form__field" id="cafe-name" type="text" name="cafe-name" placeholder="введите название мероприятия" value="" />
                 </div>
 
                 <div class="form__unit">
                   <label class="form__label" for="event-date">дата проведения</label>
-                  <input
-                    class="form__field"
-                    id="event-date"
-                    type="text"
-                    name="event-date"
-                    placeholder="укажите дату в формате дд.мм.гггг"
-                    value=""
-                  />
+                  <input class="form__field" id="event-date" type="text" name="event-date" placeholder="укажите дату в формате дд.мм.гггг" value="" />
                 </div>
 
                 <div class="form__unit">
                   <label class="form__label" for="contact-name">контактное лицо</label>
-                  <input
-                    class="form__field"
-                    id="contact-name"
-                    type="text"
-                    name="contact-name"
-                    placeholder="введите ФИО"
-                    value=""
-                  />
+                  <input class="form__field" id="contact-name" type="text" name="contact-name" placeholder="введите ФИО" value="" />
                 </div>
 
                 <div class="form__unit">
