--- a/pages/other-form_step3.html
+++ b/pages/other-form_step3.html
@@ -21,13 +21,13 @@
           <nav class="header__nav-bar">
             <ul class="header__link-list">
               <li class="header__list-item">
-                <button type="button" class="button button_type_link">куда пойти</button>
+                <a href="#" class="header__link">куда пойти</a>
               </li>
               <li class="header__list-item">
-                <button type="button" class="button button_type_link" onclick="location.href='../index.html';">стать участником</button>
+                <a href="../index.html" class="header__link">стать участником</a>
               </li>
               <li class="header__list-item">
-                <button type="button" class="button button_type_link">о фестивале</button>
+                <a href="#" class="header__link">о фестивале</a>
               </li>
             </ul>
           </nav>
@@ -57,25 +57,11 @@
               <fieldset class="form__labeled-container">
                 <div class="form__unit">
                   <label class="form__label" for="other-clock">время проведения</label>
-                  <input
-                    class="form__field"
-                    id="other-clock"
-                    type="text"
-                    name="other-clock"
-                    placeholder="например: 18:00-22:00"
-                    value=""
-                  />
+                  <input class="form__field" id="other-clock" type="text" name="other-clock" placeholder="например: 18:00-22:00" value="" />
                 </div>
                 <div class="form__unit">
                   <label class="form__label" for="other-address">адрес проведения</label>
-                  <input
-                    class="form__field"
-                    id="other-address"
-                    type="text"
-                    name="other-address"
-                    placeholder="каждый адрес с новой строки"
-                    value=""
-                  />
+                  <input class="form__field" id="other-address" type="text" name="other-address" placeholder="каждый адрес с новой строки" value="" />
                 </div>
                 <div class="form__unit">
                   <label class="form__label" for="contact-number">номер телефона для бронирования</label>
@@ -118,7 +104,7 @@
           </div>
         </div>
       </main>
-      
+
       <footer class="footer">
         <div class="footer__container">
           <img class="footer__image" src="../images/footer_illustration.svg" alt="Ночлежка" />
