--- a/pages/partyForm_step3.html
+++ b/pages/partyForm_step3.html
@@ -21,13 +21,13 @@
           <nav class="header__nav-bar">
             <ul class="header__link-list">
               <li class="header__list-item">
-                <button type="button" class="button button_type_link">куда пойти</button>
+                <a href="#" class="header__link">куда пойти</a>
               </li>
               <li class="header__list-item">
-                <button type="button" class="button button_type_link" onclick="location.href='../index.html';">стать участником</button>
+                <a href="../index.html" class="header__link">стать участником</a>
               </li>
               <li class="header__list-item">
-                <button type="button" class="button button_type_link">о фестивале</button>
+                <a href="#" class="header__link">о фестивале</a>
               </li>
             </ul>
           </nav>
