Making BEM validator happy

--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
       </header>
 
       <main class="content">
-        <h1 class="participate__title">стать участником</h1>
-        <div class="participate__content">
-          <div class="participate__container">
-            <h2 class="participate__subtitle">как участвовать?</h2>
+        <h1 class="content__title">стать участником</h1>
+        <div class="content__holder">
+          <div class="content__container">
+            <h2 class="content__subtitle">как участвовать?</h2>
             <div class="question-block">
               <h3 class="question-block__number">1</h3>
               <h4 class="question-block__title">выбор категории</h4>
@@ -83,14 +83,8 @@
             </div>
           </div>
 
-          <div class="participate__controls">
-            <button
-              type="button"
-              class="form-input form-input__control form-input__control_active participate__control"
-              onclick="location.href='./pages/category.html';"
-            >
-              заполнить форму
-            </button>
+          <div class="content__controls">
+            <button type="button" class="content__control" onclick="location.href='./pages/category.html';">заполнить форму</button>
           </div>
         </div>
       </main>
