--- a/pages/cafeForm.html
+++ b/pages/cafeForm.html
@@ -43,8 +43,8 @@
       </header>
 
       <main class="content">
-        <h1 class="form__title">стать участником</h1>
-        <div class="form__content">
+        <h1 class="content__title content__title_hideable">стать участником</h1>
+        <div class="form">
           <div class="form__container">
             <p class="form__step">шаг 2 из 4</p>
             <div class="form__instruction">
@@ -59,7 +59,7 @@
               </div>
             </div>
             <form class="form__form" id="cafe" action="cafe-contacts.html" name="category__form">
-              <div class="form__input-container form-input__bottom-line">
+              <div class="form__input-container form__bottom-line">
                 <div class="form-input form-input_active">
                   <span>кафе/бар/ресторан</span>
                   <div class="form-input__checker form-input__checker_checked"></div>
@@ -109,7 +109,7 @@
             <button
               type="button"
               name="category__form"
-              class="form__button_type_back form-input form-input__control"
+              class="form__control_type_back form-input form__control"
               onclick="location.href='./category.html';"
             >
               назад
@@ -118,7 +118,7 @@
               type="submit"
               form="cafe"
               name="category__form"
-              class="form__button_type_submit form-input form-input__control form-input__control_active"
+              class="form__control_type_submit form-input form__control form__control_active"
             ></button>
           </div>
         </div>
