--- a/pages/cafe-contacts.html
+++ b/pages/cafe-contacts.html
@@ -44,8 +44,8 @@
       </header>
 
       <main class="content">
-        <h1 class="form__title">стать участником</h1>
-        <div class="form__content">
+        <h1 class="content__title content__title_hideable">стать участником</h1>
+        <div class="form">
           <div class="form__container">
             <p class="form__step">шаг 3 из 4</p>
             <div class="form__instruction">
@@ -69,42 +69,28 @@
 
                 <div class="form__unit">
                   <label class="form__label" for="cafe-address">адрес заведения</label>
-                  <input
-                    class="form__field formCafe__input_type_text"
-                    id="cafe-address"
-                    type="text"
-                    name="cafe-address"
-                    placeholder="каждый адрес с новой строки"
-                    value=""
-                  />
+                  <input class="form__field" id="cafe-address" type="text" name="cafe-address" placeholder="каждый адрес с новой строки" value="" />
                 </div>
 
                 <div class="form__unit">
                   <label class="form__label" for="contact-name">контактное лицо</label>
-                  <input
-                    class="form__field formCafe__input_type_text"
-                    id="contact-name"
-                    type="text"
-                    name="contact-name"
-                    placeholder="введите ФИО"
-                    value=""
-                  />
+                  <input class="form__field" id="contact-name" type="text" name="contact-name" placeholder="введите ФИО" value="" />
                 </div>
 
                 <div class="form__unit">
                   <label class="form__label" for="contact-number">номер телефона заведения</label>
-                  <input class="form__field formCafe__input_type_number" id="contact-number" type="tel" name="contact-number" value="+7(" />
+                  <input class="form__field" id="contact-number" type="tel" name="contact-number" value="+7(" />
                 </div>
 
                 <div class="form__unit">
                   <label class="form__label" for="contact-number">ссылка на сайт</label>
-                  <input class="form__field formCafe__input_type_text" id="cafe-site" type="text" name="cafe-site" value="https://" />
+                  <input class="form__field" id="cafe-site" type="text" name="cafe-site" value="https://" />
                 </div>
 
                 <div class="form__unit">
                   <label class="form__label" for="contact-number">ссылки на соцсети</label>
                   <input
-                    class="form__field formCafe__input_type_text"
+                    class="form__field"
                     id="cafe-social-links"
                     type="text"
                     name="cafe-social-links"
@@ -128,12 +114,8 @@
             </form>
           </div>
           <div class="form__controls">
-            <button type="button" class="form-input form-input__control" onclick="location.href='../pages/cafeForm.html';">назад</button>
-            <button
-              type="submit"
-              form="cafeContacts"
-              class="form__button_type_submit form-input form-input__control form-input__control_active"
-            ></button>
+            <button type="button" class="form-input form__control" onclick="location.href='../pages/cafeForm.html';">назад</button>
+            <button type="submit" form="cafeContacts" class="form__control_type_submit form-input form__control form__control_active"></button>
           </div>
         </div>
       </main>
