--- a/pages/master-class_Step3.html
+++ b/pages/master-class_Step3.html
@@ -43,8 +43,8 @@
       </header>
 
       <main class="content">
-        <h1 class="form__title">стать участником</h1>
-        <div class="form__content">
+        <h1 class="content__title content__title_hideable">стать участником</h1>
+        <div class="form">
           <div class="form__container">
             <p class="form__step">шаг 3 из 4</p>
             <div class="form__instruction">
@@ -65,7 +65,7 @@
                 </div>
                 <div class="form__unit">
                   <label class="form__label" for="contact-number">номер телефона для бронирования</label>
-                  <input class="form__field formCafe__input_type_number" id="contact-number" type="tel" name="contact-number" value="+7(" />
+                  <input class="form__field" id="contact-number" type="tel" name="contact-number" value="+7(" />
                 </div>
                 <div class="form__unit">
                   <label class="form__label" for="participation-price">стоимость участия</label>
@@ -93,10 +93,10 @@
             </form>
           </div>
           <div class="form__controls">
-            <button type="button" class="form-input form-input__control form__button_type_back" onclick="location.href='../pages/master-class.html';">
+            <button type="button" class="form-input form__control form__control_type_back" onclick="location.href='../pages/master-class.html';">
               назад
             </button>
-            <button type="submit" class="form-input form-input__control form__button_type_submit form-input__control_active"></button>
+            <button type="submit" class="form-input form__control form__control_type_submit form__control_active"></button>
           </div>
         </div>
       </main>
