--- a/pages/other-form_step3.html
+++ b/pages/other-form_step3.html
@@ -43,8 +43,8 @@
       </header>
 
       <main class="content">
-        <h1 class="form__title">стать участником</h1>
-        <div class="form__content">
+        <h1 class="content__title content__title_hideable">стать участником</h1>
+        <div class="form">
           <div class="form__container">
             <p class="form__step">шаг 3 из 4</p>
             <div class="form__instruction">
@@ -93,14 +93,10 @@
             </form>
           </div>
           <div class="form__controls">
-            <button type="button" class="form__button_type_back form-input form-input__control" onclick="location.href='../pages/other.html';">
+            <button type="button" class="form__control_type_back form-input form__control" onclick="location.href='../pages/other.html';">
               назад
             </button>
-            <button
-              type="submit"
-              form="otherContacts"
-              class="form__button_type_submit form-input form-input__control form-input__control_active"
-            ></button>
+            <button type="submit" form="otherContacts" class="form__control_type_submit form-input form__control form__control_active"></button>
           </div>
         </div>
       </main>
