--- a/pages/other.html
+++ b/pages/other.html
@@ -43,8 +43,8 @@
       </header>
 
       <main class="content">
-        <h1 class="form__title">стать участником</h1>
-        <div class="form__content">
+        <h1 class="content__title content__title_hideable">стать участником</h1>
+        <div class="form">
           <div class="form__container">
             <p class="form__step">шаг 2 из 4</p>
             <div class="form__instruction">
@@ -56,7 +56,7 @@
               </div>
             </div>
             <form class="form__form" id="other" action="other-form_step3.html" name="category__form">
-              <div class="form__input-container form-input__bottom-line">
+              <div class="form__input-container form__bottom-line">
                 <div class="form-input form-input_active">
                   <span>другое</span>
                   <div class="form-input__checker form-input__checker_checked"></div>
@@ -96,8 +96,8 @@
             </form>
           </div>
           <div class="form__controls">
-            <button type="button" class="form-input form-input__control" onclick="location.href='../pages/category.html';">назад</button>
-            <button type="submit" form="other" class="form__button_type_submit form-input form-input__control form-input__control_active"></button>
+            <button type="button" class="form-input form__control" onclick="location.href='../pages/category.html';">назад</button>
+            <button type="submit" form="other" class="form__control_type_submit form-input form__control form__control_active"></button>
           </div>
         </div>
       </main>
