--- a/pages/category.html
+++ b/pages/category.html
@@ -41,7 +41,7 @@
           </div>
         </div>
       </header>
-      <main class="content">
+      <main class="content content_place_category">
         <h1 class="content__title content__title_hideable">стать участником</h1>
         <div class="form">
           <div class="form__container">
@@ -50,7 +50,7 @@
               <p class="form__heading">выберите категорию</p>
             </div>
             <form class="form__form" id="categoryForm" name="category__form">
-              <fieldset class="form__input-container">
+              <fieldset class="form__input-container form_type_category">
                 <label class="form-input radio-button">
                   <input class="form__radio" type="radio" name="category_cafe" value="cafe" />
                   <span>кафе/бар/ресторан</span>
