--- a/pages/partyForm_step3.html
+++ b/pages/partyForm_step3.html
@@ -54,7 +54,7 @@
               </div>
             </div>
             <form class="form__form" id="partyContacts" name="category__form">
-              <fieldset class="form__labeled-container">
+              <fieldset class="form__labeled-container form__labeled-container_place_form">
                 <div class="form__unit">
                   <label class="form__label" for="party-clock">время проведения</label>
                   <input class="form__field" id="party-clock" type="text" name="party-clock" placeholder="например: 18:00-22:00" value="" />
@@ -89,12 +89,10 @@
                 <div class="form__unit">
                   <label class="form__label" for="party-description">описание</label>
                   <textarea
-                    class="form__field form-input form__textarea"
+                    class="form__field form-input form__textarea form__textarea_size_m"
                     name="party-description"
                     id="party-description"
                     placeholder="Напишите небольшой анонс вашего мероприятия. Чем оно будет полезно/чему посвящено"
-                    cols="30"
-                    rows="6"
                   ></textarea>
                 </div>
               </fieldset>
