--- a/pages/cafe-contacts.html
+++ b/pages/cafe-contacts.html
@@ -55,7 +55,7 @@
               </div>
             </div>
             <form class="form__form" id="cafeContacts" name="category__form">
-              <fieldset class="form__labeled-container">
+              <fieldset class="form__labeled-container form__labeled-container_place_form">
                 <div class="form__unit">
                   <label class="form__label" for="cafe-work-hours">часы работы заведения</label>
                   <input
@@ -76,7 +76,6 @@
                   <label class="form__label" for="contact-name">контактное лицо</label>
                   <input class="form__field" id="contact-name" type="text" name="contact-name" placeholder="введите ФИО" value="" />
                 </div>
-
                 <div class="form__unit">
                   <label class="form__label" for="contact-number">номер телефона заведения</label>
                   <input class="form__field" id="contact-number" type="tel" name="contact-number" value="+7(" />
@@ -102,7 +101,7 @@
                 <div class="form__unit">
                   <label class="form__label" for="cafe-description">описание</label>
                   <textarea
-                    class="form__field form-input form__textarea"
+                    class="form__field form-input form__textarea form__textarea_size_l"
                     name="cafe-description"
                     id="cafe-description"
                     placeholder="Напишите небольшое приглашение своим посетителям. Людям нравятся простые обращения, дружественный тон"
