--- a/pages/cafeForm.html
+++ b/pages/cafeForm.html
@@ -60,7 +60,7 @@
             </div>
             <form class="form__form" id="cafe" action="cafe-contacts.html" name="category__form">
               <div class="form__input-container form__bottom-line">
-                <div class="form-input form-input_active">
+                <div class="form-input form-input_active form-input_place_forms">
                   <span>кафе/бар/ресторан</span>
                   <div class="form-input__checker form-input__checker_checked"></div>
                 </div>
@@ -94,12 +94,10 @@
                 <div class="form__unit">
                   <label class="form__label" for="cafe-description">описание</label>
                   <textarea
-                    class="form__field form-input form__textarea"
+                    class="form-input form__field form__textarea form__textarea_size_xl"
                     name="cafe-description"
                     id="cafe-description"
                     placeholder="Укажите что из меню будет принимать участие в акции"
-                    cols="30"
-                    rows="6"
                   ></textarea>
                 </div>
               </fieldset>
