--- a/pages/master-class.html
+++ b/pages/master-class.html
@@ -55,28 +55,30 @@
               </div>
             </div>
             <form class="form__form" id="master-class" action="master-class_Step3.html" name="category__form">
-              <div class="form__input-container">
-                <div class="form-input form-input_active">
+              <div class="form__input-container form__bottom-line">
+                <div class="form-input form-input_active form-input_place_forms">
                   <span>мастер-класс/лекция</span>
                   <div class="form-input__checker form-input__checker_checked"></div>
                 </div>
               </div>
-
-              <fieldset class="form__radio-block">
-                <label class="form__radio-unit">
-                  <span class="form__radio-icon form__radio-icon_checked"></span>
-                  <input class="form__radio" type="radio" id="master-class-online" name="master-class-online" value="online" checked />
-                  <span>онлайн</span>
-                </label>
-
-                <label class="form__radio-unit">
-                  <span class="form__radio-icon"></span>
-                  <input class="form__radio" type="radio" id="master-class-offline" name="master-class-offline" value="offline" />
-                  <span>оффлайн</span>
-                </label>
+              <fieldset class="form__radio-block form__bottom-line">
+                <div class="form__unit">
+                  <label class="form__radio-unit">
+                    <span class="form__radio-icon form__radio-icon_checked"></span>
+                    <input class="form__radio" type="radio" id="master-class-online" name="master-class-online" value="online" checked />
+                    <span>онлайн</span>
+                  </label>
+                </div>
+                <div class="form__unit">
+                  <label class="form__radio-unit">
+                    <span class="form__radio-icon"></span>
+                    <input class="form__radio" type="radio" id="master-class-offline" name="master-class-offline" value="offline" />
+                    <span>оффлайн</span>
+                  </label>
+                </div>
               </fieldset>
 
-              <fieldset class="form__labeled-container">
+              <fieldset class="form__labeled-container ">
                 <div class="form__unit">
                   <label class="form__label">город</label>
                   <select class="form__field form__list">
@@ -88,7 +90,14 @@
 
                 <div class="form__unit">
                   <label class="form__label" for="event-name">название мероприятия</label>
-                  <input class="form__field" id="event-name" type="text" name="event-name" placeholder="введите название мероприятия" value="" />
+                  <input
+                    class="form__field"
+                    id="event-name"
+                    type="text"
+                    name="event-name"
+                    placeholder="введите название"
+                    value=""
+                  />
                 </div>
 
                 <div class="form__unit">
