--- a/pages/master-class_Step3.html
+++ b/pages/master-class_Step3.html
@@ -54,7 +54,7 @@
               </div>
             </div>
             <form class="form__form" name="category__form">
-              <fieldset class="form__labeled-container">
+              <fieldset class="form__labeled-container form__labeled-container_place_form">
                 <div class="form__unit">
                   <label class="form__label" for="cafe-clock">время проведения</label>
                   <input class="form__field" id="cafe-clock" type="text" name="cafe-clock" placeholder="например: 18:00-22:00" value="" />
@@ -81,12 +81,10 @@
                 <div class="form__unit">
                   <label class="form__label" for="cafe-description">описание</label>
                   <textarea
-                    class="form__field form-input form__textarea"
+                    class="form__field form-input form__textarea form__textarea_size_l"
                     name="cafe-description"
                     id="cafe-description"
                     placeholder="Напишите небольшой анонс вашего местер-класса или лекции. Чем мероприятие будет полезно, чему посвящено"
-                    cols="30"
-                    rows="6"
                   ></textarea>
                 </div>
               </fieldset>
