--- a/pages/other-form_step3.html
+++ b/pages/other-form_step3.html
@@ -54,7 +54,7 @@
               </div>
             </div>
             <form class="form__form" id="otherContacts" name="category__form">
-              <fieldset class="form__labeled-container">
+              <fieldset class="form__labeled-container form__labeled-container_place_form">
                 <div class="form__unit">
                   <label class="form__label" for="other-clock">время проведения</label>
                   <input class="form__field" id="other-clock" type="text" name="other-clock" placeholder="например: 18:00-22:00" value="" />
@@ -81,12 +81,10 @@
                 <div class="form__unit">
                   <label class="form__label" for="other-description">описание</label>
                   <textarea
-                    class="form__field form-input form__textarea"
+                    class="form__field form-input form__textarea form__textarea_size_l"
                     name="other-description"
                     id="other-description"
                     placeholder="Напишите небольшое приглашение своим посетителям. Людям нравятся простые обращения, дружественный тон"
-                    cols="30"
-                    rows="6"
                   ></textarea>
                 </div>
               </fieldset>
