--- a/pages/partyForm.html
+++ b/pages/partyForm.html
@@ -57,45 +57,79 @@
             </div>
             <form class="form__form" id="party" action="partyForm_step3.html" name="category__form">
               <div class="form__input-container form__bottom-line">
-                <div class="form-input form-input_active">
+                <div class="form-input form-input_active form-input_place_forms">
                   <span>посиделки/вечеринка</span>
                   <div class="form-input__checker form-input__checker_checked"></div>
                 </div>
               </div>
-
-              <fieldset class="form__input-container">
-                <label class="form__label">город</label>
-                <select class="form__field form__city-list">
-                  <option value="" style="display: none">Выберите из списка</option>
-                  <option>Москва</option>
-                  <option>Санкт-Петербург</option>
-                </select>
-                <label class="form__label" for="party-name">название мероприятия</label>
-                <input class="form__field" id="party-name" type="text" name="party-name" placeholder="введите название" value="" />
-              </fieldset>
-              <fieldset class="form__radio-block">
-                <label class="form__radio-unit">
-                  <span class="form__radio-icon form__radio-icon_checked"></span>
-                  <input class="form__radio" type="radio" id="party-public" name="party-public" value="public" />
-                  <span>открытое мероприятие</span>
-                </label>
-                <p class="form__radio-subtitle">адрес отобразим в карточке события</p>
-
-                <label class="form__radio-unit">
-                  <span class="form__radio-icon"></span>
-                  <input class="form__radio" type="radio" id="party-private" name="party-private" value="private" />
-                  <span>закрытое мероприятие</span>
-                </label>
-                <p class="form__radio-subtitle">адрес увидят только, те кому вы оправите ссылку на событие</p>
+              <fieldset class="form__labeled-container form__bottom-line">
+                <div class="form__unit">
+                  <label class="form__label">город</label>
+                  <select class="form__field form__city-list">
+                    <option value="" style="display: none">Выберите из списка</option>
+                    <option>Москва</option>
+                    <option>Санкт-Петербург</option>
+                  </select>
+                </div>
+                <div class="form__unit ">
+                  <label class="form__label" for="party-name">название мероприятия</label>
+                  <input
+                    class="form__field"
+                    id="party-name"
+                    type="text"
+                    name="party-name"
+                    placeholder="введите название"
+                    value=""
+                  />
+                </div>
               </fieldset>
 
-              <fieldset class="form__input-container">
-                <label class="form__label" for="event-date">дата проведения</label>
-                <input class="form__field" id="event-date" type="text" name="event-date" placeholder="укажите дату в формате дд.мм.гггг" value="" />
-                <label class="form__label" for="contact-name">контактное лицо</label>
-                <input class="form__field" id="contact-name" type="text" name="contact-name" placeholder="введите ФИО" value="" />
-                <label class="form__label" for="contact-number">телефон для связи с организатором</label>
-                <input class="form__field" id="contact-number" type="tel" name="contact-number" value="+7(" />
+              <fieldset class="form__radio-block form__bottom-line ">
+                <div class="form__unit ">
+                  <label class="form__radio-unit">
+                    <span class="form__radio-icon form__radio-icon_checked"></span>
+                    <input class="form__radio" type="radio" id="party-public" name="party-public" value="public" />
+                    <span>открытое мероприятие</span>
+                  </label>
+                  <p class="form__radio-subtitle">адрес отобразим в карточке события</p>
+                </div>
+                <div class="form__unit">
+                  <label class="form__radio-unit">
+                    <span class="form__radio-icon"></span>
+                    <input class="form__radio" type="radio" id="party-private" name="party-private" value="private" />
+                    <span>закрытое мероприятие</span>
+                  </label>
+                  <p class="form__radio-subtitle">адрес увидят только, те кому вы оправите ссылку на событие</p>
+                </div>
+              </fieldset>
+
+              <fieldset class="form__labeled-container">
+                <div class="form__unit">
+                  <label class="form__label" for="event-date">дата проведения</label>
+                  <input
+                    class="form__field"
+                    id="event-date"
+                    type="text"
+                    name="event-date"
+                    placeholder="укажите дату в формате дд.мм.гггг"
+                    value=""
+                  />
+                </div>
+                <div class="form__unit">
+                  <label class="form__label" for="contact-name">контактное лицо</label>
+                  <input
+                    class="form__field"
+                    id="contact-name"
+                    type="text"
+                    name="contact-name"
+                    placeholder="введите ФИО"
+                    value=""
+                  />
+                </div>
+                <div class="form__unit">
+                  <label class="form__label" for="contact-number">телефон для связи с организатором</label>
+                  <input class="form__field" id="contact-number" type="tel" name="contact-number" value="+7(" />
+                </div>
               </fieldset>
             </form>
           </div>
